--- a/styles/globals.css
+++ b/styles/globals.css
@@ -89,8 +89,8 @@
   @apply mt-5 text-5xl font-extrabold leading-[1.15] text-black sm:text-6xl;
 }
 
-.orange_gradient {
-  @apply bg-gradient-to-r from-amber-500 via-orange-600 to-yellow-500 bg-clip-text text-transparent;
+.blue_gradient {
+  @apply bg-gradient-to-r from-indigo-500 via-yellow-500 to-red-500 bg-clip-text text-transparent;
 }
 
 .green_gradient {
